--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -18,3 +18,10 @@ body {
     position: fixed;
     right: 0;
 }
+#scrollUp{bottom:20px;right:20px;background:#555;color:#fff;font-size:12px;
+          font-family:sans-serif;text-decoration:none;opacity:.8;padding:5px;
+          -webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;
+          -webkit-transition:background 200ms linear;-moz-transition:background 200ms linear;
+          transition:background 200ms linear}
+#scrollUp:hover{background:#000}
+#scrollUp .glyphicon{margin:10px;font-size:24px}
